--- a/exercises/templates/exercise_form.html
+++ b/exercises/templates/exercise_form.html
@@ -24,9 +24,9 @@
                 {% if exercise.language == "python"%}
                 <option value="python">Python</option>
                 {% elif exercise.language == "c" %}
-                <option value="text/x-c">C</option>
+                <option value="c">C</option>
                 {% elif exercise.language == "java" %}
-                <option value="text/x-java">Java</option>
+                <option value="java">Java</option>
                 {% endif %}
             </select>
             {{ form.code.label }}
