--- a/exercises/templates/exercise_list.html
+++ b/exercises/templates/exercise_list.html
@@ -2,12 +2,12 @@
 
 {% block content %}
 <h2>Programming Exercises</h2>
-<a href="{% url 'exercise_add' %}" class="btn btn-primary" title="Add New Exercise" data-toggle="tooltip">
+<a href="{% url 'exercises:exercise_add' %}" class="btn btn-primary" title="Add New Exercise" data-toggle="tooltip">
     <i class="fas fa-plus"></i> Add a new exercise
 </a>
 <ul>
     {% for exercise in exercises %}
-        <li><a href="{% url 'exercise_detail' exercise.id %}">{{ exercise.title }}</a></li>
+        <li><a href="{% url 'exercises:exercise_detail' exercise.id %}">{{ exercise.title }}</a></li>
     {% endfor %}
 </ul>
 {% endblock %}
