--- a/exercises/templates/base_generic.html
+++ b/exercises/templates/base_generic.html
@@ -10,17 +10,17 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="{% url 'exercise_list' %}">Programming Grader</a>
+        <a class="navbar-brand" href="{% url 'exercises:exercise_list' %}">Programming Grader</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'exercise_list' %}">Exercises</a>
+                    <a class="nav-link" href="{% url 'exercises:exercise_list' %}">Exercises</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'result_list' %}">My Submissions</a>
+                    <a class="nav-link" href="{% url 'exercises:result_list' %}">My Submissions</a>
                 </li>
             </ul>
         </div>
