--- a/exercises/templates/base_generic.html
+++ b/exercises/templates/base_generic.html
@@ -6,6 +6,8 @@
     <title>{% block title %}Grading System{% endblock %}</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    
     {% block extra_css %}{% endblock %}
 </head>
 <body>
